--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,6 @@
 <div class="show-container">
-  <h1 class=""> <%= @article.title %> </h1>
-  <p> <%= @article.content %></p>
+  <h1 class="show-center"> <%= @article.title %> </h1>
+  <p class="show-center"> <%= @article.content %></p>
 </div>
 
 
